--- a/_config.yml
+++ b/_config.yml
@@ -6,27 +6,27 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: fr
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Paris
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Portfolio # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Portfolio etudiant # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Portfolio personel etudiant BTS SIO Badr Aboulakjam
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "http://badraboulakjam.xyz"
 
 github:
-  username: github_username # change to your github username
+  username: Badabula # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Aboulakjam Badr
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
