--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "http://badraboulakjam.xyz"
+url: "https://badraboulakjam.xyz"
 
 github:
   username: Badabula # change to your github username
@@ -112,7 +112,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://badraboulakjam.xyz"
 
 # ------------ The following options are not recommended to be modified ------------------
 
