--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://badraboulakjam.xyz"
+baseurl: "https://badraboulakjam.xyz/"
 
 # ------------ The following options are not recommended to be modified ------------------
 
